<resources>
    <string name="app_name">CarCompanion</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome to Car Companion!</string>
    <string name="login">Sign in with Email</string>
    <string name="use_as_guest">Use As Guest</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="troubleshooting_mode">Troubleshooting Mode</string>
    <string name="car_details">Car Details</string>
    <string name="nav_help_string">Nearby Towing/Mechanics</string>
    <string name="anon_car_details">Please login/sign up to use this feature!</string>
    <string name="nickname">Nickname:</string>
    <string name="ymm">Year Make Model:</string>
    <string name="vin">VIN:</string>
    <string name="license_plate">License Plate:</string>
    <string name="license_state">License State:</string>
    <string name="add_a_car">Add a Car</string>
    <string name="logout">Logout</string>
    <string name="init_trouble_title">What sensory experience are you having?</string>
    <string name="back_step">Back Step</string>
    <string name="restart_step">Restart Troubleshooting</string>
    <string name="next_step">Next Step</string>
    <string name="diagnosis_title">A possible Diagnosis is...</string>
    <string name="year">Year:</string>
    <string name="title_activity_help_map">Map</string>
    <string name="back_to_home_text">Back home</string>
    <string name="mechanics">Mechanics</string>
    <string name="autoshops">AutoShops</string>
    <string name="search">Search</string>
</resources>