<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.rosehulman.kaupaies.carcompanion.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_car_detail"
        android:name="edu.rosehulman.kaupaies.carcompanion.ui.car_info.CarDetailFragment"
        android:label="@string/car_details"
        tools:layout="@layout/fragment_car_details" />

    <fragment
        android:id="@+id/navigation_troubleshooting"
        android:name="edu.rosehulman.kaupaies.carcompanion.ui.troubleshooting.TroubleshootingFragment"
        android:label="@string/troubleshooting_mode"
        tools:layout="@layout/fragment_troubleshooting" />

    <fragment
        android:id="@+id/navigation_find_help"
        android:name="edu.rosehulman.kaupaies.carcompanion.FindHelpFragment"
        android:label="Find Help"
        tools:layout="@layout/fragment_find_help" />
    <action
        android:id="@+id/action_global_navigation_troubleshooting"
        app:destination="@id/navigation_troubleshooting"
        app:popUpTo="@id/navigation_home" />
</navigation>